Further BitLocker improvements
1. Improved localization
2. Added reminder to back up volume details

--- a/Harden System Security/Strings/AR/Resources.resw
+++ b/Harden System Security/Strings/AR/Resources.resw
@@ -3541,4 +3541,37 @@
   <data name="UAC_NoFastUserSwitchingTIP" xml:space="preserve">
     <value>ستمنعك هذه السياسة من استخدام ميزة "Forgot my PIN" في شاشة القفل أو تسجيل الدخول. إذا نسيت رقم PIN فلن تتمكن من استعادته.</value>
   </data>
+  <data name="SelectARemovableDriveText.Text" xml:space="preserve">
+    <value>حدد محرك أقراص قابل للإزالة</value>
+  </data>
+  <data name="RefreshButton.Content" xml:space="preserve">
+    <value>تحديث</value>
+  </data>
+  <data name="RefreshButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>تحديث</value>
+  </data>
+  <data name="RefreshButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>تحديث</value>
+  </data>
+  <data name="EnterAPasswordText.Text" xml:space="preserve">
+    <value>أدخل كلمة مرور</value>
+  </data>
+  <data name="EnterAPinText.Text" xml:space="preserve">
+    <value>أدخل رقم PIN</value>
+  </data>
+  <data name="EnterARecoveryPassword.Text" xml:space="preserve">
+    <value>أدخل كلمة مرور الاسترداد</value>
+  </data>
+  <data name="TotalCertsPlaceHolder.PlaceholderText" xml:space="preserve">
+    <value>إجمالي الشهادات</value>
+  </data>
+  <data name="DeleteCertMenuFlyoutItem.Text" xml:space="preserve">
+    <value>حذف الشهادة</value>
+  </data>
+  <data name="DeleteCertMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>حذف الشهادة المحددة</value>
+  </data>
+  <data name="DeleteCertMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>حذف الشهادة المحددة</value>
+  </data>
 </root>
