--- a/Harden System Security/Strings/pl-PL/Resources.resw
+++ b/Harden System Security/Strings/pl-PL/Resources.resw
@@ -3541,4 +3541,37 @@ Odcisk Palca: {3}</value>
   <data name="UAC_NoFastUserSwitchingTIP" xml:space="preserve">
     <value>Ta zasada uniemożliwi korzystanie z funkcji "Forgot my PIN" na ekranie blokady lub logowania. Jeśli zapomnisz kodu PIN, nie będzie można go odzyskać.</value>
   </data>
+  <data name="SelectARemovableDriveText.Text" xml:space="preserve">
+    <value>Wybierz dysk wymienny</value>
+  </data>
+  <data name="RefreshButton.Content" xml:space="preserve">
+    <value>Odśwież</value>
+  </data>
+  <data name="RefreshButton.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Odśwież</value>
+  </data>
+  <data name="RefreshButton.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Odśwież</value>
+  </data>
+  <data name="EnterAPasswordText.Text" xml:space="preserve">
+    <value>Wprowadź hasło</value>
+  </data>
+  <data name="EnterAPinText.Text" xml:space="preserve">
+    <value>Wprowadź kod PIN</value>
+  </data>
+  <data name="EnterARecoveryPassword.Text" xml:space="preserve">
+    <value>Wprowadź hasło odzyskiwania</value>
+  </data>
+  <data name="TotalCertsPlaceHolder.PlaceholderText" xml:space="preserve">
+    <value>Łączna liczba certyfikatów</value>
+  </data>
+  <data name="DeleteCertMenuFlyoutItem.Text" xml:space="preserve">
+    <value>Usuń certyfikat</value>
+  </data>
+  <data name="DeleteCertMenuFlyoutItem.ToolTipService.ToolTip" xml:space="preserve">
+    <value>Usuń wybrany certyfikat</value>
+  </data>
+  <data name="DeleteCertMenuFlyoutItem.AutomationProperties.HelpText" xml:space="preserve">
+    <value>Usuń wybrany certyfikat</value>
+  </data>
 </root>
